Updated taxe 2018 (markdown)

--- a/taxe-2018.md
+++ b/taxe-2018.md
@@ -1,2 +1,3 @@
 # Referinte
 - https://www.softblog.eu/2018/01/declaratia-600-din-2018-cine-o-depune-si-cum-se-calculeaza-contributiile/
+  - Summary - Orice persoana fizica depune declaratia 600 daca a obtinut mai mult de 1900 lei luna x 12 luni = 22800 lei pe an din activitati independente cum ar fi: venituri din contracte de drepturi de autor (DDA), dintr-o formă de organizare juridică gen PFA, II etc., (definirea veniturilor din activități independente o găsești în codul fiscal la art. 67) venituri din chirii, venituri din arendă, venituri din dividende, etc
